# FightGameChatBot

./: .dockerignore  .env  Dockerfile  README.md  client_example.py  docker-compose.yml  health_check.py  pyproject.toml  server.py
core/: __init__.py  agent.py  concepts.py  session_manager.py
models/: __init__.py  concept.py  response.py  speech_example.py
proto/: chatbot.proto
services/: __init__.py  character_chat_service.py
utils/: config.py
